--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
           <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="right-banner">
-          <img class="image1" src="images/Circle design.svg" alt="" />
-
-          <img class="camera-img" src="images/main-camera.png" alt="" />
+          <div class="div1">
+            <img class="image1" src="images/Circle design.svg" alt="" />
+          </div>
+          <div class="div2">
+            <img class="camera-img" src="images/main-camera.png" alt="" />
+          </div>
         </div>
       </section>
     </main>
