sponser section 95% done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
           <img class="camera-img" src="images/main-camera.png" alt="" />
         </div>
       </section>
+
+      <section class="sponsor-logo-container">
+        <div class="hr-div">
+          <hr />
+          <div class="sponser-inner">
+            <img src="logos/Alibaba.svg" alt="" />
+            <img src="logos/Amazon.svg" alt="" />
+            <img src="logos/Daraz.pk Logo.svg" alt="" />
+            <img src="logos/Ebay.svg" alt="" />
+            <img src="logos/Rakuten.svg" alt="" />
+            <img src="logos/Walmart.svg" alt="" />
+            <img src="logos/Target.svg" alt="" />
+          </div>
+          <hr />
+        </div>
+      </section>
     </main>
   </body>
   <script
