--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header hide">
       <h3 class="title">Influencer products</h3>
       <nav>
         <ul>
@@ -34,7 +34,8 @@
     </header>
 
     <main>
-      <section class="banner">
+      <!-- Banner section -->
+      <section class="banner hide">
         <div class="left-banner">
           <h1>Start your Journey as Influencer</h1>
           <p>
@@ -49,8 +50,8 @@
           <img class="camera-img" src="images/main-camera.png" alt="" />
         </div>
       </section>
-
-      <section class="sponsor-logo-container">
+      <!-- Sponsor section -->
+      <section class="sponsor-logo-container hide">
         <div class="hr-div">
           <hr />
           <div class="sponser-inner">
@@ -63,6 +64,182 @@
             <img src="logos/Target.svg" alt="" />
           </div>
           <hr />
+        </div>
+      </section>
+      <!-- collection section -->
+      <section class="collection-container">
+        <h3 class="title">Popular Collection</h3>
+        <div class="collection-card-container">
+          <div class="card">
+            <img src="images/tripod.png" alt="" />
+            <h4 class="card-title">Flex Tripod</h4>
+            <p class="card-price">$50.48</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/mic.png" alt="" />
+            <h4 class="card-title">Microphone</h4>
+            <p class="card-price">$120.25</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/airpod.png" alt="" />
+            <h4 class="card-title">Airbuds</h4>
+            <p class="card-price">$100.00</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/drone.png" alt="" />
+            <h4 class="card-title">Drone</h4>
+            <p class="card-price">$980.25</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/lights.png" alt="" />
+            <h4 class="card-title">Light Setup</h4>
+            <p class="card-price">$1200</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/setup.png" alt="" />
+            <h4 class="card-title">Photoshoot set</h4>
+            <p class="card-price">$820.40</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <h4 class="card-title">Vlogging Camera</h4>
+            <p class="card-price">$1800.80</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/single-light.png" alt="" />
+            <h4 class="card-title">Green Screen</h4>
+            <p class="card-price">$25.48</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/action.png" alt="" />
+            <h4 class="card-title">Action Camera</h4>
+            <p class="card-price">$25.48</p>
+            <div class="rating">
+              <div class="star">
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star itag"></i
+                ><i class="fa-solid fa-star itag"></i>
+                <i class="fa-solid fa-star-half-stroke itag"></i>
+              </div>
+              <span>4.99</span>
+            </div>
+            <p class="card-details-p">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
         </div>
       </section>
     </main>
