--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <header class="header hide">
+    <header class="header">
       <h3 class="title">Influencer products</h3>
       <nav>
         <ul>
@@ -35,7 +35,7 @@
 
     <main>
       <!-- Banner section -->
-      <section class="banner hide">
+      <section class="banner">
         <div class="left-banner">
           <h1>Start your Journey as Influencer</h1>
           <p>
@@ -51,7 +51,7 @@
         </div>
       </section>
       <!-- Sponsor section -->
-      <section class="sponsor-logo-container hide">
+      <section class="sponsor-logo-container">
         <div class="hr-div">
           <hr />
           <div class="sponser-inner">
@@ -241,7 +241,53 @@
             </p>
           </div>
         </div>
+        <div class="see-more-div">
+          <h4 class="collection-h4">
+            See More <i class="fa-solid fa-arrow-right"></i>
+          </h4>
+        </div>
       </section>
+
+      <!-- future product -->
+
+      <section class="feature-product">
+        <div class="feature-inner-container">
+          <div class="left-feature">
+            <img src="images/gear.png" alt="" />
+          </div>
+          <div class="right-feature">
+            <h2>Featured products at one place</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <button>Join Now <i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="footer-container">
+          <h3>Influencer products</h3>
+          <p>Copyright © 2020 influencer products</p>
+          <p>All rights reserved</p>
+          <div class="footer-icon-container">
+            <div class="div-1">
+              <i class="fa-brands fa-instagram footer-itag"></i>
+            </div>
+            <div class="div-1">
+              <i class="fa-brands fa-dribbble footer-itag"></i>
+            </div>
+            <div class="div-1">
+              <i class="fa-brands fa-twitter footer-itag"></i>
+            </div>
+            <div class="div-1">
+              <i class="fa-brands fa-youtube footer-itag"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
   <script
